--- a/_posts/2014-04-10-the-heartbleed-bug.html
+++ b/_posts/2014-04-10-the-heartbleed-bug.html
@@ -17,7 +17,10 @@ excerpt:   There is a serious bug in the popular OpenSSL software. Wait, what do
 
       <h2>What does this mean?</h2>
       <p>
-        SSL or <a href="http://en.wikipedia.org/wiki/Transport_Layer_Security">TLS</a> is a cryptographic protocol, which should provide a secure communication over the internet. OpenSSL is one software you can use to achieve that. In fact over 60% of all active HTTPS servers use OpenSSL. Anything can use SSL/TLS: A website, e-mail provider, instant messenger or even a vpn-network. With the Geartbleed bug this communication safety is destroyed and could possible be hijacked. They could pretend to be you or read any information you enter into forms.
+        SSL or <a href="http://en.wikipedia.org/wiki/Transport_Layer_Security">TLS</a> is a cryptographic protocol, which should provide a secure communication over the internet. OpenSSL is one software you can use to achieve that. In fact over 60% of all active HTTPS servers use OpenSSL. Anything can use SSL/TLS: A website, e-mail provider, instant messenger or even a vpn-network.
+      </p>
+      <p>
+        With the Heartbleed bug this communication safety is destroyed and could possible be hijacked. They could pretend to be you or read any information you enter into forms.
       </p>
     </div>
   </section>
