--- a/_posts/2014-04-10-the-heartbleed-bug.html
+++ b/_posts/2014-04-10-the-heartbleed-bug.html
@@ -65,6 +65,8 @@ excerpt:   There is a serious bug in the popular OpenSSL software. Wait, what do
       <h2>More Information</h2>
       <p>The bug was first mentioned on the <a href="https://www.openssl.org/news/secadv_20140407.txt">openssl.org</a> vulnerabilities news site, but it quickly spread to other popular sites like <a href="http://blog.cloudflare.com/staying-ahead-of-openssl-vulnerabilities">cloudflare.com</a> and twitter, where I read about it.</p>
 
+      <p>Oh and there is a xkcd comic on <a href="http://xkcd.com/1354/">how the hearthbleed bug works</a>.</p>
+
       <p>You can find out more on <a href="http://heartbleed.com/">heartbleed.com</a>.</p>
     </div>
   </section>
