--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="outer bg--blue" style="background-image:url(/assets/img/cover/cover_big_me.jpg);" id="hello" role="banner">
   <div class="outer--overlay"></div>
   <div class="container" itemscope itemtype="http://schema.org/Person">
-    <div class="col-70">
+    <div class="col-70 text-align--center">
       <h1 class="hero animated fadeInDown" itemprop="name">Volker Otto</h1>
       <h2 class="h3 subheader animated fadeInDown" itemprop="jobTitle">Web Architect, Hamburg</h2>
     </div>
