--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ layout: default
 <div class="outer bg--blue" style="background-image:url(/assets/img/cover/cover_big_me.jpg);" id="hello" role="banner">
   <div class="outer--overlay"></div>
   <div class="container" itemscope itemtype="http://schema.org/Person">
-    <div class="col-70 text-align--center">
+    <div class="col-70">
       <h1 class="hero animated fadeInDown" itemprop="name">Volker Otto</h1>
-      <h2 class="h3 subheader animated fadeInDown" itemprop="jobTitle">Web Architect, Hamburg</h2>
+      <h2 class="h3 text-align--center subheader animated fadeInDown" itemprop="jobTitle">Web Architect, Hamburg</h2>
     </div>
     <div class="col-60 margin--m--bottom animated fadeInDown">
       <hr>
