--- a/_posts/2014-04-10-the-heartbleed-bug.html
+++ b/_posts/2014-04-10-the-heartbleed-bug.html
@@ -14,7 +14,13 @@ excerpt:   There is a serious bug in the popular OpenSSL software. Wait, what do
         <br>
         <cite src="http://heartbleed.com/">Find out more on <a href="http://heartbleed.com/">heartbleed.com</a></cite>
       </p>
+    </div>
+  </section>
+</div>
 
+<div class="outer bg--blue">
+  <section class="container">
+    <div class="col-75">
       <h2>What does this mean?</h2>
       <p>
         SSL or <a href="http://en.wikipedia.org/wiki/Transport_Layer_Security">TLS</a> is a cryptographic protocol, which should provide a secure communication over the internet. OpenSSL is one software you can use to achieve that. In fact over 60% of all active HTTPS servers use OpenSSL. Anything can use SSL/TLS: A website, e-mail provider, instant messenger or even a vpn-network.
@@ -22,17 +28,6 @@ excerpt:   There is a serious bug in the popular OpenSSL software. Wait, what do
       <p>
         With the Heartbleed bug this communication safety is destroyed and could possible be hijacked. They could pretend to be you or read any information you enter into forms.
       </p>
-    </div>
-  </section>
-</div>
-
-<div class="outer bg--red">
-  <section class="container">
-    <div class="col-75">
-      <blockquote>
-        On the plus side, it is now in fact possible to download more RAM. Someone else's, that is.
-        <cite src="http://www.reddit.com/r/webdev/comments/22im3b/server_admins_update_openssl_asap_if_you_havent/cgnc1pc">Taken from a <a href="http://www.reddit.com/r/webdev/comments/22im3b/server_admins_update_openssl_asap_if_you_havent/cgnc1pc">reddit comment</a></cite>
-      </blockquote>
     </div>
   </section>
 </div>
