--- a/_posts/2014-04-10-the-heartbleed-bug.html
+++ b/_posts/2014-04-10-the-heartbleed-bug.html
@@ -5,7 +5,7 @@ published: true
 tags:      blog
 excerpt:   There is a serious bug in the popular OpenSSL software. Wait, what does this mean and what can I do?
 ---
-<div class="outer">
+<div class="padding--m outer">
   <section class="container">
     <div class="col-75">
       <h2>What is this?</h2>
@@ -18,7 +18,7 @@ excerpt:   There is a serious bug in the popular OpenSSL software. Wait, what do
   </section>
 </div>
 
-<div class="outer bg--blue">
+<div class="outer padding--m bg--blue">
   <section class="container">
     <div class="col-75">
       <h2>What does this mean?</h2>
