--- a/_posts/2014-05-07-links-and-notes-1-april.html
+++ b/_posts/2014-05-07-links-and-notes-1-april.html
@@ -1,10 +1,10 @@
 ---
-title:     "N&L #1 Mai '14"
+title:     "N&L #1 April '14"
 layout:    post
 published: true
 tags:      blog
-excerpt:   Notes and Links for Mai 2014
-cover:     cover_nl_mai_2014.jpg
+excerpt:   Notes and Links for April 2014
+cover:     cover_nl_april_2014.jpg
 ---
 <div class="outer">
   <section class="container padding--m--bottom">
