--- a/_posts/2014-07-03-css-background-image-blur-without-blury-edges.html
+++ b/_posts/2014-07-03-css-background-image-blur-without-blury-edges.html
@@ -4,7 +4,7 @@ layout:    post
 published: true
 tags:      blog
 excerpt:   Trying to get rid of the blury edges when using filter:blur() on a background image.
-cover:     cover_nl_june_2014.jpg
+cover:     cover_big_city.jpg
 ---
 <div class="outer">
   <section class="container padding--m--bottom">
