changed kreativmarkt link

--- a/clients/index.html
+++ b/clients/index.html
@@ -36,7 +36,7 @@ cover: cover_big_mountain.jpg
       </a>
     </div>
     <div class="col-30 animated bounceIn">
-      <a class="client" href="http://kreativmarkt.de" title="Kreativmarkt">
+      <a class="client" href="http://kreativmarkt.com" title="Kreativmarkt">
         <img src="/assets/img/clients/kreativmarkt.jpg" alt="">
       </a>
     </div>
