added new layout

--- a/imprint/index.html
+++ b/imprint/index.html
@@ -1,6 +1,6 @@
 ---
 title: Imprint
-layout: default
+layout: page
 ---
 <h1 class="hero">Imprint</h1>
 <p class="lead subheader">Angaben gemäß § 5 TMG sowie verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</p>
