--- a/imprint/index.html
+++ b/imprint/index.html
@@ -1,10 +1,8 @@
 ---
 title: Imprint
 layout: page
+excerpt: Angaben gemäß § 5 TMG sowie verantwortlich für den Inhalt nach § 55 Abs. 2 RStV
 ---
-<h1 class="hero">Imprint</h1>
-<p class="lead subheader">Angaben gemäß § 5 TMG sowie verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</p>
-
 <h3>Contact</h3>
 <p>
 Volker Otto<br>
