--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
     <div class="row">
       <div class="col">
         <h1>Making your dream<br> come to web</h1>
-        <p class="lead">As a Web Architect I work for companys/agencys to create their web appearence from building the right foundation to ongoing optimization and support. Design, development, crafting, sales. I uncover problems and solve them.</p>
+        <p class="lead">As a Web Architect I work for companys &amp; agencys. Creating web appearences from building the right foundation to ongoing optimization and support. I uncover problems and solve them.</p>
         <p class="lead">In short, I try to make the web a better place.</p>
       </div><!-- .col -->
     </div><!-- .row -->
@@ -47,7 +47,7 @@ layout: default
         <div class="col-25">
           <span class="preH">4. Maintenance</span>
           <h2 class="h3">Analyse</h2>
-          <p>Once the site is up my job is not over. Its very important to react to visitor data - once enough analytics has happend.</p>
+          <p>Its very important to respond on feedback and tests once your customers start using your site. I help you to never stop evolving.</p>
         </div><!-- .col -->
       </div><!-- .row -->
     </div><!-- .container -->
@@ -85,7 +85,7 @@ layout: default
 
       <div class="row row--centered">
           <div class="col-75 text-center">
-              <h2 class="">Let's talk</h2>
+              <h2>Let's talk</h2>
               <p class="lead">
                 I would love to chat with you. I live in Hamburg, Germany GMT+1 timezone. Drop me a line and I'll get back to you in no time.
               </p>
