fixed so many typos 😧

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
     <div class="row">
       <div class="col">
         <h1>Making your dream<br> come to web</h1>
-        <p class="lead">As a Web Architect I work for companys &amp; agencys. Creating web appearences from building the right foundation to ongoing optimization and support. I uncover problems and solve them.</p>
+        <p class="lead">As a Web Architect, I work for companys and agencies. Creating web appearances, from building the right foundation, to ongoing optimization and support. I uncover problems and solve them.</p>
         <p class="lead">In short, I try to make the web a better place.</p>
       </div><!-- .col -->
     </div><!-- .row -->
@@ -23,7 +23,7 @@ layout: default
           <div class="col-75">
             <h2 class="">From small things<br>to great change</h2>
             <p class="lead">
-              I aim to build long lasting partnerships with my customers. I want to share the responsibility for the quality of my customers products and services, from the smallest design details to long term impact and strategic direction.
+              I aim to build long lasting partnerships with my customers. I want to share the responsibility of my customers products and services. From the smallest design details, to long term impact analysis and strategic development.
             </p>
           </div><!-- .col -->
       </div><!-- .row -->
@@ -37,7 +37,7 @@ layout: default
         <div class="col-25">
           <span class="preH">2. Blueprint</span>
           <h2 class="h3">Design</h2>
-          <p>Also known as Front-End Development: Setting the mood, fitting the corporate identify and defining the layout in a responsive manner.</p>
+          <p>Also known as Front-End Development: Setting the mood, fitting the corporate identity and defining the layout in a responsive manner.</p>
         </div><!-- .col -->
         <div class="col-25">
           <span class="preH">3. Construction</span>
@@ -47,7 +47,7 @@ layout: default
         <div class="col-25">
           <span class="preH">4. Maintenance</span>
           <h2 class="h3">Analyse</h2>
-          <p>Its very important to respond on feedback and tests once your customers start using your site. I help you to never stop evolving.</p>
+          <p>Its very important to respond to feedback and tests, once your customers start using your site. I help you, to never stop evolving.</p>
         </div><!-- .col -->
       </div><!-- .row -->
     </div><!-- .container -->
@@ -60,7 +60,7 @@ layout: default
           <div class="col-75">
               <h2>My Clients</h2>
               <p class="lead">
-                I work with corporations, institutions and startups in a wide range of industries. Here are some of the clients I have had the pleasure working with:
+                I work with corporations, institutions and startups in a wide range of industries. Here are some of the clients, I have had the pleasure working with:
               </p>
           </div><!-- .col -->
       </div><!-- .row -->
@@ -87,7 +87,7 @@ layout: default
           <div class="col-75 text-center">
               <h2>Let's talk</h2>
               <p class="lead">
-                I would love to chat with you. I live in Hamburg, Germany GMT+1 timezone. Drop me a line and I'll get back to you in no time.
+                I would love to chat with you. Drop me a line and I'll get back to you in no time.
               </p>
               <a href="mailto:{{ site.me.email }}" class="btn">Leave me a message!</a>
           </div><!-- .col -->
