--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
     <div class="row">
       <div class="col">
         <h1>Making your dream<br> come to web</h1>
-        <p class="lead">As a Web Architect, I work for companys and agencies. Creating web appearances, from building the right foundation, to ongoing optimization and support. I uncover problems and solve them.</p>
+        <p class="lead">As a Web Architect, I work for companies and agencies.<br>Creating web appearances: Building the right foundation to ongoing optimization and support. I uncover problems and solve them.</p>
         <p class="lead">In short, I try to make the web a better place.</p>
       </div><!-- .col -->
     </div><!-- .row -->
