fixed layout and css pathing

--- a/index.html
+++ b/index.html
@@ -1,32 +1,11 @@
-<!doctype html>
-<html lang="de">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>volkerotto.net - hello 👋</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="index,follow" />
-
-    <link rel="canonical" href="{{ site.url }}{{ page.url | remove:'index.html'}}" />
-    <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
-
-    <link rel="shortcut icon" href="{{ site.url }}/favicon.ico"/>
-    <script src="{{ site.url }}/assets/js/main.js"></script>
-</head>
-
-<!--
-
-  Hey fellow devs,
-  have a nice day!
-
-  - Volker
-  -->
+---
+layout: default
+---
 
 <a href="javascript:void(0);" class="darkmode-toggle">🔦</a>
 
 <header class="header">
-    <div class="jail jail-big">
+    <div class="jail jail-big"
         <div class="header-text">
             <div class="headline">hello.</div>
             <p>My name is <strong>Volker Otto</strong> and as a <strong>web industry professional</strong> with over 15 years of experience, I am currently serving as the <strong><a href="https://digital-masters.de">CTO @ Digital Masters</a></strong>, where I lead the development of cutting-edge <strong>e-commerce</strong> and <strong>platform solutions</strong> for our clients. </p>
@@ -206,6 +185,5 @@
                 </linearGradient>
             </defs>
         </svg>
-
     </div>
 </footer>
