fix asset img path

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@ layout: default
 <a href="javascript:void(0);" class="darkmode-toggle">🔦</a>
 
 <header class="header">
-    <div class="jail jail-big"
+    <div class="jail jail-big">
         <div class="header-text">
             <div class="headline">hello.</div>
-            <p>My name is <strong>Volker Otto</strong> and as a <strong>web industry professional</strong> with over 15 years of experience, I am currently serving as the <strong><a href="https://digital-masters.de">CTO @ Digital Masters</a></strong>, where I lead the development of cutting-edge <strong>e-commerce</strong> and <strong>platform solutions</strong> for our clients. </p>
+            <p>My name is <strong>Volker Otto</strong> and as a <strong>web industry professional</strong> with over <script>document.write(new Date().getFullYear()-2008)</script> years of experience, I am currently serving as the <strong><a href="https://digital-masters.de">CTO @ Digital Masters</a></strong>, where I lead the development of cutting-edge <strong>e-commerce</strong> and <strong>platform solutions</strong> for our clients. </p>
         </div>
 
         <nav class="px-2">
@@ -73,9 +73,9 @@ layout: default
 
         <nav class="social-links">
             <ul>
-                <li><a href="https://www.linkedin.com/in/hellovolker/"><img src="{{ site.url }}/assets/linkedin.png" alt=""/> LinkedIn</a></li>
-                <li><a href="https://twitter.com/hellovolker"><img src="{{ site.url }}/assets/twitter.png" alt=""/> Twitter</a></li>
-                <li><a href="mailto:volker.otto@digital-masters.de"><img src="{{ site.url }}/assets/email.png" alt=""/> E-Mail</a></li>
+                <li><a href="https://www.linkedin.com/in/hellovolker/"><img src="{{ site.url }}/assets/img/linkedin.png" alt=""/> LinkedIn</a></li>
+                <li><a href="https://twitter.com/hellovolker"><img src="{{ site.url }}/assets/img/twitter.png" alt=""/> Twitter</a></li>
+                <li><a href="mailto:volker.otto@digital-masters.de"><img src="{{ site.url }}/assets/img/email.png" alt=""/> E-Mail</a></li>
             </ul>
         </nav>
         <div class="bg bg-lightgrey"></div>
@@ -103,9 +103,9 @@ layout: default
 
         <nav class="social-links">
             <ul>
-                <li><a href="https://steamcommunity.com/id/l4ci/"><img src="{{ site.url }}/assets/steam.png" alt=""/> Steam</a></li>
-                <li><a href="https://www.instagram.com/chirpysnail/"><img src="{{ site.url }}/assets/instagram.png" alt=""/> Instagram</a></li>
-                <li><a href="https://open.spotify.com/show/5PqjKRzcfK7dZ4A4fCPI4t"><img src="{{ site.url }}/assets/spotify.png" alt=""/> Podcast</a></li>
+                <li><a href="https://steamcommunity.com/id/l4ci/"><img src="{{ site.url }}/assets/img/steam.png" alt=""/> Steam</a></li>
+                <li><a href="https://www.instagram.com/chirpysnail/"><img src="{{ site.url }}/assets/img/instagram.png" alt=""/> Instagram</a></li>
+                <li><a href="https://open.spotify.com/show/5PqjKRzcfK7dZ4A4fCPI4t"><img src="{{ site.url }}/assets/img/spotify.png" alt=""/> Podcast</a></li>
             </ul>
         </nav>
         <div class="bg bg-blue"></div>
