🚀 relaunch 2.0 - final final commit

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ---
 layout: default
 ---
-
-<a href="javascript:void(0);" class="darkmode-toggle">🔦</a>
+<a href="javascript:void(0);" class="darkmode-toggle" id="darkmode-toggle">🔦</a>
 
 <header class="header">
     <div class="jail jail-big">
@@ -12,7 +11,7 @@ layout: default
         </div>
 
         <nav class="px-2">
-            <p class="px">Continue reading about my …</p>
+            <p class="px">Continue reading more about my …</p>
             <ul>
                 <li>💪 <a href="#professional-focus">Professional Focus</a></li>
                 <li>👨‍👩‍👧 <a href="#personal-life">Personal Life</a></li>
@@ -121,20 +120,20 @@ layout: default
             <h2>Work experience</h2>
 
             <dl>
-                <dt>Since 2018</dt>
-                <dd><strong class="cl-purple">CTO @ Digital Masters</strong></dd>
+                <dt><strong>Since 2018</strong></dt>
+                <dd><strong class="">CTO @ <a href="https://digital-masters.de">Digital Masters</a></strong></dd>
 
                 <dt>2017 - 2018</dt>
-                <dd>Lead Web Business Architect @ Digital Masters</dd>
+                <dd>Lead Web Business Architect @ <a href="https://digital-masters.de">Digital Masters</a></dd>
 
                 <dt>2013 - 2017</dt>
-                <dd>Senior Frontend Developer @ Schokoladenseite.net</dd>
+                <dd>Senior Frontend Developer @ <a href="https://schokoladenseite.net/">Schokoladenseite.net</a></dd>
 
                 <dt>2012 - 2018</dt>
                 <dd>Web Architect @ Freelance</dd>
 
                 <dt>2010 - 2013</dt>
-                <dd>Web Developer @ Schokoladenseite.net</dd>
+                <dd>Web Developer @ <a href="https://schokoladenseite.net/">Schokoladenseite.net</a></dd>
             </dl>
 
             <h2>Education</h2>
@@ -169,7 +168,7 @@ layout: default
         <p><strong><em>👋 Thanks for stopping by!</em></strong></p>
         <p>Copyright &copy; 2018 - <script>
                 document.write(new Date().getFullYear())
-            </script> – All rights reserved.</p>
+            </script> – All rights reserved. &middot; <a href="{{ site.url }}/imprint/">Impressum</a></p>
         <div class="bg bg-purple"></div>
     </div>
     <div class="lines bottom">
@@ -185,5 +184,6 @@ layout: default
                 </linearGradient>
             </defs>
         </svg>
+
     </div>
 </footer>
