--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
     <div class="jail jail-big">
         <div class="header-text">
             <div class="headline">hello.</div>
-            <p>My name is <strong>Volker Otto</strong> and as a <strong>web industry professional</strong> with over <script>document.write(new Date().getFullYear()-2008)</script> years of experience, I am currently serving as the <strong><a href="https://digital-masters.de">CTO @ Digital Masters</a></strong>, where I lead the development of cutting-edge <strong>e-commerce</strong> and <strong>platform solutions</strong> for our clients. </p>
+            <p>My name is <strong>Volker Otto</strong> and as a <strong>web industry professional</strong> with over <script>document.write(new Date().getFullYear()-2008)</script> years of experience, I am currently serving as the <strong class="no-br"><a href="https://digital-masters.de">CTO @ Digital Masters</a></strong>, where I lead the development of cutting-edge <strong>e-commerce</strong> and <strong>platform solutions</strong> for our clients. </p>
         </div>
 
         <nav class="px-2">
