💄more ios hotfixes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<a href="javascript:void(0);" class="darkmode-toggle" id="darkmode-toggle">🔦</a>
+<!-- <a href="javascript:void(0);" class="darkmode-toggle" id="darkmode-toggle">🔦</a> -->
 
 <header class="header">
     <div class="jail jail-big">
