somre more fixes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<!-- <a href="javascript:void(0);" class="darkmode-toggle" id="darkmode-toggle">🔦</a> -->
+<!-- <a href="javascript:void(0);" class="darkmode-toggle" id="darkmode-toggle">🔦</a>-->
 
 <header class="header">
     <div class="jail jail-big">
@@ -20,7 +20,7 @@ layout: default
         </nav>
 </header>
 
-<div class="lines first-right">
+<div class="lines-mask first-right">
     <svg viewBox="-579 0 1158 1329" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path class="p1" d="M882.047 1017.72c321.723-75.011 297.393-248.472 237.143-397.822-60.25-149.351-149.661-129.768-164.175-313.435-9.951-125.91-237.919-169.309-349.36-219.6728C466.354 23.8353 430.423 269.627 241.37 354.014 52.3183 438.4 138 811.442 254.084 962.132c116.085 150.688 306.243 130.598 627.963 55.588Z" stroke="#3A3A3A" stroke-opacity=".1" stroke-width="4" />
         <path class="p2" d="M903.721 828.933c227.059-143.172 175.959-280.296 102.489-388.436-73.478-108.14-78.598-69.394-124.272-217.424-31.311-101.479-210.489-79.771-303.6-93.234-116.389-16.828-154.998 195.247-280.787 312.67-125.79 117.423 9.124 403.893 124.72 499.045 115.597 95.146 254.394 30.55 481.45-112.621Z" stroke="#3A3A3A" stroke-opacity=".1" stroke-width="4" />
@@ -34,8 +34,9 @@ layout: default
         </defs>
     </svg>
 </div>
-<div class="lines first-left">
-    <svg class="first-left" viewBox="555 0 1111 1176" fill="none" xmlns="http://www.w3.org/2000/svg">
+
+<div class="lines-mask first-left">
+    <svg viewBox="555 0 1111 1176" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path class="p1" d="M791.695 930.8C1056.42 806.993 1015.86 662.536 947.538 545.416C879.214 428.296 893.887 455.008 860.487 299.976C837.59 193.697 638.931 198.519 538.473 175.848C412.901 147.508 350.752 314.085 199.814 421.45C48.8752 528.814 164.462 833.319 280.373 941.281C396.284 1049.24 526.966 1054.61 791.695 930.8Z" stroke="#3A3A3A" stroke-opacity="0.1" stroke-width="4" />
         <path class="p2" d="M566.28 939.936C764.598 975.508 794.266 853.071 797.862 737.18C801.459 621.288 800.113 647.294 837.802 520.648C863.638 433.828 747.184 344.08 697.523 280.721C635.447 201.523 538.357 291.607 411.771 297.65C285.184 303.692 240.013 575.893 267.253 707.555C294.493 839.217 367.963 904.364 566.28 939.936Z" stroke="url(#paint0_linear_4_301)" stroke-width="4" />
         <path class="p3" d="M322.861 724.259C379.599 926.373 405.751 834.327 499.278 843.744C592.805 853.161 596.825 908.137 696.162 884.736C764.26 868.693 772.594 672.371 794.53 596.531C821.949 501.731 722.815 452.59 667.516 336.9C612.217 221.21 436.427 338.103 360.068 424.604C283.709 511.105 266.122 522.145 322.861 724.259Z" stroke="#3A3A3A" stroke-opacity="0.1" stroke-width="4" />
@@ -171,7 +172,7 @@ layout: default
             </script> – All rights reserved. &middot; <a href="{{ site.url }}/imprint/">Impressum</a></p>
         <div class="bg bg-purple"></div>
     </div>
-    <div class="lines bottom">
+    <div class="lines-mask bottom">
         <svg viewBox="0 -396 1034 792" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path class="p1" d="M574.418 709.991C849.193 698.615 1001.5 570.671 944.874 479.211C888.245 387.751 932.867 308.157 914.556 201.531C902.003 128.436 668.167 112.936 570.574 73.1468C448.581 23.4107 412.158 169.418 251.968 199.191C91.7768 228.963 37.1601 449.308 141.927 547.018C246.693 644.727 299.644 721.367 574.418 709.991Z" stroke="#3A3A3A" stroke-opacity="0.1" stroke-width="4" />
             <path class="p2" d="M529.998 94.502C310.797 111.162 187.057 146.767 140.498 234.502C93.9393 322.236 195.999 386.501 159.998 542.001C123.998 697.501 370.434 699.607 435.998 730.501C517.954 769.118 613.717 706.649 747.998 677.502C882.279 648.354 931.686 359.669 876.725 280.315C821.764 200.961 749.199 77.842 529.998 94.502Z" stroke="url(#paint0_linear_4_305)" stroke-width="4" />
