--- a/imprint/index.html
+++ b/imprint/index.html
@@ -3,38 +3,39 @@ title: Imprint
 layout: default
 ---
 
-<section class="section">
-    <div class="jail">
-        <span class="section-label" id="imprint">
+<section class="section" id="imprint">
+    <div class="container">
+        <span class="section__label" >
             💼 Impressum & Contact
         </span>
 
-        <a href="/">⬅️ Back to the homepage</a>
+        <a href="/">⬅️ Bring me home</a>
 
-        <div class="section-text">
+        <div class="section__text">
           <p>Angaben gemäß § 5 TMG sowie verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</p>
           <p>
-          Volker Otto<br>
-          Glashütter Kirchenweg 25<br>
-          D-22851 Norderstedt<br>
+            Volker Otto<br>
+            Glashütter Kirchenweg 25<br>
+            D-22851 Norderstedt<br>
           </p>
 
           <table>
             <tr>
-              <td>Phone: </td>
-              <td>+49 / 15775 <span style="display:none;pointer-events: none;">22813</span> 212165</td>
+              <td>📞 Phone: </td>
+              <td>+49 / 157 75<span style="display:none;pointer-events: none;">22813</span>2 121 65</td>
             </tr>
             <tr>
-              <td>E-Mail: </td>
+              <td>📨 E-Mail: </td>
               <td><a href="mailto:admin@volkerotto.net">admin@volkerotto.net</a></td>
             </tr>
           </table>
 
-          <p class="px-2"><strong>🍪 Cookie Hinweis</strong></p>
+          <h2 class="section__subline px-2"><strong>🍪 Cookie Notice</strong></p>
 
-          <p>Es werden keinerlei Daten in Cookies gespeichert - außerdem sind keinerlei externe Tools oder Tracking Dienste angeschlossen.</p>
+          <p>No data is stored in cookies - furthermore, I do not use any external tools or tracking services. Unless you send me a
+          message via email or contact me through social media, I will never know that you have visited my website. ✌️</p>
 
-          <p class="px-2"><strong>Disclaimer</strong></p>
+          <h2 class="section__subline px-2"><strong>Disclaimer 🇩🇪</strong></h2>
 
           <p><strong>Haftung für Inhalte</strong></p>
           <p>Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</p>
@@ -45,9 +46,9 @@ layout: default
           <p class="px-2"><strong>Urheberrecht</strong></p>
           <p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</p>
 
-            <a href="/" class="px-2">⬅️ Back to the homepage</a>
+            <a href="/" class="px-2">⬅️ Bring me home</a>
         </div>
 
-        <div class="bg bg-lightgrey"></div>
+        <div class="section__bg section__bg--lightgrey"></div>
     </div>
 </section>
