--- a/index.html
+++ b/index.html
@@ -116,10 +116,11 @@ layout: default
 
     <div class="section__text">
 
-      <p>I am a <strong>married father</strong> of a beautiful daughter and we live in the green town of Norderstedt,
-        near <strong>Hamburg</strong><span>🇩🇪</span>. I enjoy spending most of my free time with my family, but
-        occasionally I like to indulge in <strong>playing games</strong> or <a
-          href="https://open.spotify.com/show/5PqjKRzcfK7dZ4A4fCPI4t">recording a podcast</a>.</p>
+      <p>Happily married and proud dad to our wonderful daughter. We live in the charming town of
+        <strong>Norderstedt</strong>, which is located close to Hamburg in 🇩🇪. Spending quality time with my loved
+        ones is what I enjoy the most, but whenever I get some free time, I like to <strong>play games</strong> or <a
+          href="https://open.spotify.com/show/5PqjKRzcfK7dZ4A4fCPI4t">record a podcast</a> to unwind and have some fun.
+      </p>
     </div>
 
     <ul class="hashtags">
