more dark mode changes

--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 ---
 layout: default
 ---
-<!-- <a href="javascript:void(0);" class="darkmode-toggle" id="darkmode-toggle">🔦</a>-->
-
 <header class="header">
   <div class="container container-big">
     <div class="header-text">
@@ -16,7 +14,7 @@ layout: default
     </div>
 
     <nav class="px-2">
-      <p class="px">Continue reading more about my …</p>
+      <p class="px">Continue reading about my …</p>
       <ul>
         <li>💪 <a href="#professional-focus">Professional Focus</a></li>
         <li>👨‍👩‍👧 <a href="#personal-life">Personal Life</a></li>
@@ -203,8 +201,11 @@ layout: default
     <p>Copyright &copy; 2018 -
       <script>
         document.write(new Date().getFullYear())
-      </script> – All rights reserved. &middot; <a href="https://volkerotto.net/imprint/">Impressum</a>
+      </script> – All rights reserved.
     </p>
+    <p><a href="#" onclick="toggleDarkMode();return false;">🔦 Toggle the light</a> &middot; <a
+        href="https://volkerotto.net/imprint/">Impressum</a></p>
+
     <div class="section__bg section__bg--purple"></div>
   </div>
   <div class="lines-mask bottom">
