💄added just another line loop

--- a/index.html
+++ b/index.html
@@ -67,6 +67,27 @@ layout: default
   </svg>
 </div>
 
+<div class="lines-mask second-right">
+  <svg viewBox="-555 0 1111 1176" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path class="p1"
+      d="M791.695 930.8C1056.42 806.993 1015.86 662.536 947.538 545.416C879.214 428.296 893.887 455.008 860.487 299.976C837.59 193.697 638.931 198.519 538.473 175.848C412.901 147.508 350.752 314.085 199.814 421.45C48.8752 528.814 164.462 833.319 280.373 941.281C396.284 1049.24 526.966 1054.61 791.695 930.8Z"
+      stroke="#3A3A3A" stroke-opacity="0.1" stroke-width="4" />
+    <path class="p2"
+      d="M566.28 939.936C764.598 975.508 794.266 853.071 797.862 737.18C801.459 621.288 800.113 647.294 837.802 520.648C863.638 433.828 747.184 344.08 697.523 280.721C635.447 201.523 538.357 291.607 411.771 297.65C285.184 303.692 240.013 575.893 267.253 707.555C294.493 839.217 367.963 904.364 566.28 939.936Z"
+      stroke="url(#paint0_linear_4_302)" stroke-width="4" />
+    <path class="p3"
+      d="M322.861 724.259C379.599 926.373 405.751 834.327 499.278 843.744C592.805 853.161 596.825 908.137 696.162 884.736C764.26 868.693 772.594 672.371 794.53 596.531C821.949 501.731 722.815 452.59 667.516 336.9C612.217 221.21 436.427 338.103 360.068 424.604C283.709 511.105 266.122 522.145 322.861 724.259Z"
+      stroke="#3A3A3A" stroke-opacity="0.1" stroke-width="4" />
+    <defs>
+      <linearGradient id="paint0_linear_4_302" x1="676.436" y1="260.039" x2="380.315" y2="880.563"
+        gradientUnits="userSpaceOnUse">
+        <stop stop-color="#59C3FF" />
+        <stop offset="1" stop-color="#9759EE" />
+      </linearGradient>
+    </defs>
+  </svg>
+</div>
+
 <section class="section" id="professional-focus">
   <div class="container">
     <h2 class="section__label">
