--- a/index.html
+++ b/index.html
@@ -154,6 +154,8 @@ layout: default
       <ul>
         <li><a href="https://steamcommunity.com/id/l4ci/"><img src="https://volkerotto.net/assets/img/steam.png"
               alt="" /> Steam</a></li>
+        <li><a href="https://www.chess.com/member/l4ci"><img src="https://volkerotto.net/assets/img/chess.png" alt="" />
+            Chess</a></li>
         <li><a href="https://www.instagram.com/chirpysnail/"><img src="https://volkerotto.net/assets/img/instagram.png"
               alt="" /> Instagram</a></li>
         <li><a href="https://open.spotify.com/show/5PqjKRzcfK7dZ4A4fCPI4t"><img
@@ -226,8 +228,6 @@ layout: default
     </p>
     <p><a href="#" onclick="toggleDarkMode();return false;">🔦 Toggle the light</a> &middot; <a
         href="https://volkerotto.net/imprint/">Impressum</a></p>
-
-    <div class="section__bg section__bg--purple"></div>
   </div>
   <div class="lines-mask bottom">
     <svg viewBox="0 -500 1034 792" fill="none" xmlns="http://www.w3.org/2000/svg">
