--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@ layout: default
       <ul>
         <li><a href="https://www.linkedin.com/in/hellovolker/"><img src="https://volkerotto.net/assets/img/linkedin.png"
               alt="" /> LinkedIn</a></li>
-        <li><a href="https://twitter.com/hellovolker"><img src="https://volkerotto.net/assets/img/twitter.png" alt="" />
-            Twitter</a></li>
+        <li><a href="https://mastodon.social/@l4ci"><img src="https://volkerotto.net/assets/img/mastodon.png" alt="@l4ci@mastodon.social" />
+            Mastodon</a></li>
         <li><a href="mailto:volker.otto@digital-masters.de"><img src="https://volkerotto.net/assets/img/email.png"
               alt="" /> E-Mail</a></li>
       </ul>
@@ -137,8 +137,7 @@ layout: default
 
       <p>Happily married and proud dad to our wonderful daughter. We live in the charming town of
         <strong>Norderstedt</strong>, which is located close to Hamburg in 🇩🇪. Spending quality time with my loved
-        ones is what I enjoy the most, but whenever I get some free time, I like to <strong>play games</strong> or <a
-          href="https://open.spotify.com/show/5PqjKRzcfK7dZ4A4fCPI4t">record a podcast</a> to unwind and have some fun.
+        ones is what I enjoy the most, but whenever I get some free time, I like tinker with <strong>smart home</strong> stuff or <strong>play some games</strong> to unwind and have some fun.
       </p>
     </div>
 
@@ -158,8 +157,6 @@ layout: default
             Chess</a></li>
         <li><a href="https://www.instagram.com/chirpysnail/"><img src="https://volkerotto.net/assets/img/instagram.png"
               alt="" /> Instagram</a></li>
-        <li><a href="https://open.spotify.com/show/5PqjKRzcfK7dZ4A4fCPI4t"><img
-              src="https://volkerotto.net/assets/img/spotify.png" alt="" /> Podcast</a></li>
       </ul>
     </nav>
     <div class="section__bg section__bg--blue"></div>
