--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ layout: default
       <ul>
         <li><a href="https://www.linkedin.com/in/hellovolker/"><img src="https://volkerotto.net/assets/img/linkedin.png"
               alt="" /> LinkedIn</a></li>
-        <li><a href="https://mastodon.social/@l4ci"><img src="https://volkerotto.net/assets/img/mastodon.png" alt="@l4ci@mastodon.social" />
+        <li><a href="https://mastodon.social/@l4ci" rel="me"><img src="https://volkerotto.net/assets/img/mastodon.png" alt="@l4ci@mastodon.social" />
             Mastodon</a></li>
         <li><a href="mailto:volker.otto@digital-masters.de"><img src="https://volkerotto.net/assets/img/email.png"
               alt="" /> E-Mail</a></li>
