--- a/index.html
+++ b/index.html
@@ -115,10 +115,8 @@ layout: default
 
     <nav class="social-links">
       <ul>
-        <li><a href="https://www.linkedin.com/in/hellovolker/"><img src="https://volkerotto.net/assets/img/linkedin.png"
-              alt="" /> LinkedIn</a></li>
-        <li><a href="mailto:volker.otto@digital-masters.de"><img src="https://volkerotto.net/assets/img/email.png"
-              alt="" /> E-Mail</a></li>
+        <li><a href="https://www.linkedin.com/in/hellovolker/"><img src="https://volkerotto.net/assets/img/linkedin.png" alt="" loading="lazy"> LinkedIn</a></li>
+        <li><a href="mailto:volker.otto@digital-masters.de"><img src="https://volkerotto.net/assets/img/email.png" alt="" loading="lazy"> E-Mail</a></li>
       </ul>
     </nav>
     <div class="section__bg section__bg--lightgrey"></div>
@@ -144,19 +142,14 @@ layout: default
       <li>father</li>
       <li>hamburg</li>
       <li>gaming</li>
-      <li>podcast</li>
     </ul>
 
     <nav class="social-links">
       <ul>
-        <li><a href="https://mastodon.social/@l4ci" rel="me"><img src="https://volkerotto.net/assets/img/mastodon.png" alt="@l4ci@mastodon.social" />
-            Mastodon</a></li>
-        <li><a href="https://www.instagram.com/chirpysnail/"><img src="https://volkerotto.net/assets/img/instagram.png"
-              alt="" /> Instagram</a></li>
-        <li><a href="https://steamcommunity.com/id/l4ci/"><img src="https://volkerotto.net/assets/img/steam.png"
-              alt="" /> Steam</a></li>
-        <li><a href="https://www.chess.com/member/l4ci"><img src="https://volkerotto.net/assets/img/chess.png" alt="" />
-            Chess</a></li>
+        <li><a href="https://mastodon.social/@l4ci" rel="me"><img src="https://volkerotto.net/assets/img/mastodon.png" alt="@l4ci@mastodon.social" loading="lazy"> Mastodon</a></li>
+        <li><a href="https://www.instagram.com/chirpysnail/"><img src="https://volkerotto.net/assets/img/instagram.png" alt="" loading="lazy"> Instagram</a></li>
+        <li><a href="https://steamcommunity.com/id/l4ci/"><img src="https://volkerotto.net/assets/img/steam.png" alt="" loading="lazy"> Steam</a></li>
+        <li><a href="https://www.chess.com/member/l4ci"><img src="https://volkerotto.net/assets/img/chess.png" alt="" loading="lazy"> Chess</a></li>
       </ul>
     </nav>
     <div class="section__bg section__bg--blue"></div>
@@ -172,7 +165,7 @@ layout: default
       <h3 class="section__subline">Work experience</h3>
 
       <dl>
-        <dt><strong>Since 2018</strong></dt>
+        <dt><strong><span class="pulse-dot"></span> Since 2018</strong></dt>
         <dd><strong class="current">CTO @ <a href="https://digital-masters.de">Digital Masters</a></strong></dd>
 
         <dt>2017 - 2018</dt>
@@ -223,8 +216,7 @@ layout: default
         document.write(new Date().getFullYear())
       </script> – All rights reserved.
     </p>
-    <p><a href="#" onclick="toggleDarkMode();return false;">🔦 Toggle the light</a> &middot; <a
-        href="https://volkerotto.net/imprint/">Impressum</a></p>
+    <p><a href="https://volkerotto.net/imprint/" title="Show the legal summary">Impressum</a></p>
   </div>
   <div class="lines-mask bottom">
     <svg viewBox="0 -500 1034 792" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -246,6 +238,5 @@ layout: default
         </linearGradient>
       </defs>
     </svg>
-
   </div>
 </footer>
