--- a/imprint/index.html
+++ b/imprint/index.html
@@ -1,6 +1,7 @@
 ---
 title: Imprint
-seo-index: false
+desc: 
+noindex: true
 ---
 <section class="section" id="impressum">
   <div class="container">
