--- a/imprint/index.html
+++ b/imprint/index.html
@@ -11,7 +11,7 @@ noindex: true
     <div class="section__text">
       <p>🇩🇪 Angaben gemäß § 5 TMG sowie verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</p>
       <p>🇪🇺 Information in accordance with Section 5 TMG and responsible for content pursuant to Section 55 (2) RStV</p>
-      <p></p>
+      <p>&nbsp;</p>
       <p>
         Volker Otto<br>
         Glashütter <span style="display:none;pointer-events: none;">please-no-post</span>Kirchenweg 25<br>
@@ -20,15 +20,15 @@ noindex: true
     </div>
 
     <ul class="hashtags">
-      <li>no-cookies</li>
-      <li>no-tracking</li>
-      <li>no-bullshit</li>
+      <li>no-ads</li>
+      <li>no-spam</li>
+      <li>no-hr-offerings</li>
     </ul>
 
     <nav class="links">
       <ul>
         <li>📞 Phone: +49 / 157 75<span style="display:none;pointer-events: none;">22813</span>2 121 65</li>
-        <li>📨 E-Mail: <a href="mailto:admin@volkerotto.net">admin@volker<span style="display:none;pointer-events: none;">no-here-</span>otto.net</a></li>
+        <li>📨 Mail: <a href="mailto:admin@volkerotto.net">admin@volker<span style="display:none;pointer-events: none;">no-here-</span>otto.net</a></li>
       </ul>
     </nav>
     <div class="section__bg section__bg--blue"></div>
