--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ layout: default
         <dd>Kindergarden @ Fünf Linden, Biberach</dd>
 
         <dt>1989</dt>
-        <dd>I was born - that's when education starts, right?</dd>
+        <dd>I was born.</dd>
       </dl>
     </div>
     <div class="section__bg section__bg--yellow"></div>
