--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+desc: Volker Otto – CTO, softwarearchitect & tech enthusiast. Focusing on digital systems, UX and scalable online plattforms.
 ---
 <header class="header">
   <div class="container container-big">
