--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: CTO, softwarearchitect & tech enthusiast.
+og-title: Volker Otto – CTO & Tech-Enthusiast
 desc: Volker Otto – CTO, softwarearchitect & tech enthusiast. Focusing on digital systems, UX and scalable online plattforms.
 ---
 <header class="header">
