--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ desc: Volker Otto – CTO, softwarearchitect & tech enthusiast. Focusing on digi
     <div class="header-text">
       <h1 class="headline">hello.</h1>
       <p>My name is <strong>Volker Otto</strong> and as a <strong>web industry professional</strong> with over
-        <script>document.write(new Date().getFullYear() - 2008)</script> years of experience, I am currently serving as
+        <script>document.write(new Date().getFullYear() - 2008)</script> years of experience, I’m currently serving as
         the <strong class="no-br"><a href="https://digital-masters.de">CTO @ Digital Masters</a></strong>, where I lead
         the development of cutting-edge <strong>e-commerce</strong> and <strong>platform solutions</strong> for our
         clients.
@@ -136,7 +136,7 @@ desc: Volker Otto – CTO, softwarearchitect & tech enthusiast. Focusing on digi
 
       <p>Happily married and proud dad to our wonderful daughter. We live in the charming town of
         <strong>Norderstedt</strong>, which is located close to Hamburg in 🇩🇪. Spending quality time with my loved
-        ones is what I enjoy the most, but whenever I get some free time, I like tinker with <strong>smart home</strong> stuff or <strong>play some games</strong> to unwind and have some fun.
+        ones is what I enjoy the most, but whenever I get some free time, I like to tinker with <strong>smart home</strong> stuff or <strong>play some games</strong> to unwind and have some fun.
       </p>
     </div>
 
