--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ desc: Volker Otto – CTO, softwarearchitect & tech enthusiast. Focusing on digi
 <header class="header">
   <div class="container container-big">
     <div class="header-text">
-      <h1 class="headline">hello.</h1>
+      <h1 class="headline" id="hello">hello</h1>
       <p>My name is <strong>Volker Otto</strong> and as a <strong>web industry professional</strong> with over
         <script>document.write(new Date().getFullYear() - 2008)</script> years of experience, I’m currently serving as
         the <strong class="no-br"><a href="https://digital-masters.de">CTO @ Digital Masters</a></strong>, where I lead
