--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: hello @ volkerotto.net – CTO, softwarearchitect & tech enthusiast.
-og-title: Volker Otto – CTO & Tech-Enthusiast
+title: CTO, softwarearchitect & tech enthusiast.
+og-title: Volker Otto – CTO, softwarearchitect & tech enthusiast
 desc: Volker Otto – CTO, softwarearchitect & tech enthusiast. Focusing on digital systems, UX and scalable online plattforms.
 ---
 <header class="header">
